--- a/index.html
+++ b/index.html
@@ -48,130 +48,201 @@
   </div>
 </header>
 
-<div class="line d-flex" style="margin-top: 20px;">
-  <hr style="height: 4px; background-color: black; border: none; width: 30%; margin-left: 5%;">
-  <h2 style="margin-left: 5%;">WHAT WE NOT?</h2>
-  <hr style="height: 4px; background-color: black; border: none; width: 30%; margin-left: 5%;">
-</div>
-
-<div class="card-header d-flex justify-content-center text-center" style="margin-top: 30px; gap: 2%;">
-  <div class="card border border-dark border-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 18rem;">
-    <div class="card-body">
-      <img src="assets/images/card1.png" alt="">
-      <h5 class="card-title">Mobilize</h5>
-      <p class="card-text">We’re here to mobilize a global movement to conserve, restore and grow 1 trillion trees by 2030.</p>
+<div class="container text-center mt-4">
+  <div class="row align-items-center">
+    <!-- Left Line -->
+    <div class="col-4 d-none d-md-block">
+      <hr style="height: 4px; background-color: rgb(2, 2, 2); border: none;">
     </div>
-  </div>
 
-  <div class="card border border-dark border-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 18rem;">
-    <div class="card-body">
-      <img src="assets/images/card2.png" alt="">
-      <h5 class="card-title">Connect</h5>
-      <p class="card-text">The scale of this global challenge is too large for any actor to achieve alone. We foster collective action.</p>
+    <!-- Title -->
+    <div class="col-12 col-md-4">
+      <h2>WHAT WE NOT?</h2>
     </div>
-  </div>
 
-  <div class="card border border-dark border-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 18rem;">
-    <div class="card-body">
-      <img src="assets/images/card3.png" alt="">
-      <h5 class="card-title">Empower</h5>
-      <p class="card-text">Many projects and solutions are ready to be scaled. We showcase models that work and empower them to reach new heights.</p>
+    <!-- Right Line -->
+    <div class="col-4 d-none d-md-block">
+      <hr style="height: 4px; background-color: black; border: none;">
     </div>
   </div>
 </div>
 
-<div class="about-tree" style="margin-top: 30px;">
-  <div class="box-11 d-flex">
-    <img src="assets/images/Tree-1.jpeg" alt="" style="width: 45%; margin-left: 5%;">
-    <div class="text-1 text-center" style="width: 40%; margin-left: 5%; margin-top: 5%;">
-      <h3>The challenge</h3>
-      <p>Forests are critical to the health of the planet. They sequester carbon, regulate global temperatures and freshwater flows, recharge groundwater, anchor fertile soil and act as flood barriers.
-        The degradation and loss of forests is destabilizing natural systems on a scale unseen in human history. We have already lost nearly half of the trees that existed before the onset of agriculture, and despite countless efforts, this loss continues to grow every year.</p>
+<div class="container">
+  <div class="row justify-content-center text-center" style="margin-top: 30px;">
+    <!-- First Card -->
+    <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center">
+      <div class="card border border-dark border-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 100%; max-width: 18rem;">
+        <div class="card-body">
+          <img src="assets/images/card1.png" alt="Mobilize" class="img-fluid">
+          <h5 class="card-title mt-3">Mobilize</h5>
+          <p class="card-text">We’re here to mobilize a global movement to conserve, restore and grow 1 trillion trees by 2030.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Second Card -->
+    <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center">
+      <div class="card border border-dark border-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 100%; max-width: 18rem;">
+        <div class="card-body">
+          <img src="assets/images/card2.png" alt="Connect" class="img-fluid">
+          <h5 class="card-title mt-3">Connect</h5>
+          <p class="card-text">The scale of this global challenge is too large for any actor to achieve alone. We foster collective action.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Third Card -->
+    <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center">
+      <div class="card border border-dark border-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 100%; max-width: 18rem;">
+        <div class="card-body">
+          <img src="assets/images/card3.png" alt="Empower" class="img-fluid">
+          <h5 class="card-title mt-3">Empower</h5>
+          <p class="card-text">Many projects and solutions are ready to be scaled. We showcase models that work and empower them to reach new heights.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="about-tree mt-4">
+  <!-- Challenge Section -->
+  <div class="row align-items-center mb-5">
+    <div class="col-12 col-md-6 d-flex justify-content-center">
+      <img src="assets/images/Tree-1.jpeg" alt="The Challenge" class="img-fluid" style="width: 90%;">
+    </div>
+    <div class="col-12 col-md-6 text-center">
+      <div class="p-3">
+        <h3>The Challenge</h3>
+        <p>
+          Forests are critical to the health of the planet. They sequester carbon, regulate global temperatures and freshwater flows, recharge groundwater, anchor fertile soil, and act as flood barriers. The degradation and loss of forests is destabilizing natural systems on a scale unseen in human history. We have already lost nearly half of the trees that existed before the onset of agriculture, and despite countless efforts, this loss continues to grow every year.
+        </p>
+      </div>
     </div>
   </div>
 
-  <div class="box-11 d-flex" style="margin-top: 5%;">
-    <div class="text-1 text-center" style="width: 40%; margin-left: 5%; margin-top: 5%;">
-      <h3>The opportunity</h3>
-      <p>Forests are an essential part of the solution to tackle climate change and biodiversity collapse. Healthy forests are also important for jobs and sustainable livelihoods through forest products and activities such as conservation and restoration.
-        Forests make us healthier and more resilient; they filter air pollution and reduce heat islands in cities; and they can propel new drug discoveries to treat current and future diseases.</p>
+  <!-- Opportunity Section -->
+  <div class="row align-items-center flex-md-row-reverse mb-5">
+    <div class="col-12 col-md-6 d-flex justify-content-center">
+      <img src="assets/images/tree-header.jpeg" alt="The Opportunity" class="img-fluid" style="width: 90%;">
     </div>
-    <img src="assets/images/tree-header.jpeg" alt="" style="width: 45%; margin-left: 5%;">
+    <div class="col-12 col-md-6 text-center">
+      <div class="p-3">
+        <h3>The Opportunity</h3>
+        <p>
+          Forests are an essential part of the solution to tackle climate change and biodiversity collapse. Healthy forests are also important for jobs and sustainable livelihoods through forest products and activities such as conservation and restoration. Forests make us healthier and more resilient; they filter air pollution and reduce heat islands in cities; and they can propel new drug discoveries to treat current and future diseases.
+        </p>
+      </div>
+    </div>
   </div>
 
-  <div class="box-11 d-flex" style="margin-top: 5%;">
-    <img src="assets/images/Tree-header.jpg" alt="" style="width: 45%; margin-left: 5%;">
-    <div class="text-1 text-center" style="width: 40%; margin-left: 5%; margin-top: 5%;">
-      <h3>The science</h3>
-      <p>In November 2023, over 200 scientists led by Crowther Lab published new science that reaffirms the importance of natural, biodiverse forests in combating climate change. It demonstrates the significant carbon drawdown potential of conserving and restoring natural forests, along with the benefits it creates for local communities, indigenous people, and biodiversity. Importantly, the science highlights that natural forests are no substitute for cutting greenhouse gas emissions or phasing out fossil fuels. To work towards an equitable future we must cut our emissions and invest in nature.</p>
+  <!-- Science Section -->
+  <div class="row align-items-center mb-5">
+    <div class="col-12 col-md-6 d-flex justify-content-center">
+      <img src="assets/images/Tree-header.jpg" alt="The Science" class="img-fluid" style="width: 90%;">
+    </div>
+    <div class="col-12 col-md-6 text-center">
+      <div class="p-3">
+        <h3>The Science</h3>
+        <p>
+          In November 2023, over 200 scientists led by Crowther Lab published new science that reaffirms the importance of natural, biodiverse forests in combating climate change. It demonstrates the significant carbon drawdown potential of conserving and restoring natural forests, along with the benefits it creates for local communities, indigenous people, and biodiversity. Importantly, the science highlights that natural forests are no substitute for cutting greenhouse gas emissions or phasing out fossil fuels. To work towards an equitable future, we must cut our emissions and invest in nature.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container mt-5">
+  <div class="row align-items-center">
+    <!-- Text Section -->
+    <div class="col-12 col-md-6">
+      <div class="mb-4">
+        <div class="d-flex align-items-center">
+          <h4 class="fw-bold">Private Sector Engagement</h4>
+          <hr class="flex-grow-1 ms-3" style="height: 4px; background-color: black; border: none;">
+        </div>
+        <h3 class="mt-4 text-center fw-bold">The Power of Action</h3>
+        <p class="mt-4">
+          Corporate ambition and action for forests is needed to reverse deforestation and reach the scale of change the planet needs. We curate a cross-industry alliance of companies committed to forest leadership and impact.
+        </p>
+        <div class="d-flex justify-content-center mt-4">
+          <button type="button" class="btn btn-success">Add More</button>
+        </div>
+      </div>
+    </div>
+    <!-- Image Section -->
+    <div class="col-12 col-md-6">
+      <img src="assets/images/box.jpg" alt="Private Sector Engagement" class="img-fluid w-100">
+    </div>
+  </div>
+</div>
+<div class="container mt-5">
+  <div class="row align-items-center">
+    <!-- Text Section -->
+    <div class="col-12 col-md-6 mx-auto">
+      <div class="mb-4">
+        <!-- Heading and Line -->
+        <div class="d-flex align-items-center">
+          <h4 class="fw-bold">Regional Engagement</h4>
+          <hr class="flex-grow-1 ms-3" style="height: 4px; background-color: black; border: none;">
+        </div>
+        <!-- Subtitle -->
+        <h3 class="mt-4 text-center fw-bold">Our Work Around the World</h3>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="box-2 d-flex" style="margin-top: 5%;">
-  <div class="box-33" style="width: 40%; margin-left: 5%; margin-top: 5%;">
-    <div class="line d-flex" style="margin-top: 20px;">
-      <h4 style="margin-left: 5%; font-weight: bold;">Private Sector Engagement</h4>
-      <hr style="height: 4px; background-color: black; border: none; width: 25%; margin-left: 2%;">
+<div class="container mt-4">
+  <div class="row">
+    <!-- Thailand Card -->
+    <div class="col-md-4 mb-3">
+      <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+        <img src="assets/images/Thailand.jpg" alt="Thailand" class="card-img-top" style="height: 200px;">
+        <div class="card-body">
+          <h5 class="card-title">Thailand</h5>
+          <p class="card-text">Phuket City, on Phuket Island, is the capital of Thailand’s Phuket Province. In the Old Town, Thalang Road is lined with colorful 19th-century</p>
+          <button type="button" class="btn btn-success">Add More</button>
+        </div>
+      </div>
     </div>
-    <div class="text-22">
-      <h3 style="margin-top: 5%; margin-left: 20%; font-weight: bold;">The Power of Action</h3>
-      <p style="margin-top: 5%; margin-left: 5%;">Corporate ambition and action for forests is needed to reverse deforestation and reach the scale of change the planet needs. We curate a cross-industry alliance of companies committed to forest leadership and impact.</p>
-      <button type="button" style="margin-left: 30%; margin-top: 5%;" class="btn btn-success">Add More</button>
-    </div>
-  </div>
-  <img src="assets/images/box.jpg" alt="" style="width: 45%; margin-left: 5%;">
-</div>
 
-<div class="box-2 d-flex" style="margin-top: 5%;">
-  <div class="box-33" style="width: 40%; margin-left: 5%; margin-top: 5%;">
-    <div class="line d-flex" style="margin-top: 20px;">
-      <h4 style="margin-left: 5%; font-weight: bold;">Regional engagement</h4>
-      <hr style="height: 4px; background-color: black; border: none; width: 25%; margin-left: 2%;">
+    <!-- Cambodia Card -->
+    <div class="col-md-4 mb-3">
+      <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+        <img src="assets/images/Cambodia.jpg" alt="Cambodia" class="card-img-top" style="height: 200px;">
+        <div class="card-body">
+          <h5 class="card-title">Cambodia</h5>
+          <p class="card-text">Cambodia is a Southeast Asian nation whose landscape spans low-lying plains, the Mekong Delta, mountains, and Gulf of Thailand coastline.</p>
+          <button type="button" class="btn btn-success">Add More</button>
+        </div>
+      </div>
     </div>
-    <div class="text-22">
-      <h3 style="margin-top: 5%; margin-left: 20%; font-weight: bold;">Our work around the world</h3>
-    </div>
-  </div>
-</div>
 
-<div class="card-21 d-flex justify-content-center" style="margin-top: 5%; gap: 4%;">
-  <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="width: 18rem;">
-    <img src="assets/images/Thailand.jpg" alt="" style="width: 100%; height: 200px;">
-    <div class="card-body">
-      <h5 class="card-title">Thailand</h5>
-      <p class="card-text">Phuket City, on Phuket Island, is the capital of Thailand’s Phuket Province. In the Old Town, Thalang Road is lined with colorful 19th-century</p>
-      <button type="button" style="margin-top: 1%;" class="btn btn-success">Add More</button>
-    </div>
-  </div>
-
-  <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="width: 18rem;">
-    <img src="assets/images/Cambodia.jpg" alt="" style="width: 100%; height: 200px;">
-    <div class="card-body">
-      <h5 class="card-title">Cambodia</h5>
-      <p class="card-text">Cambodia is a Southeast Asian nation whose landscape spans low-lying plains, the Mekong Delta, mountains and Gulf of Thailand coastline. </p>
-      <button type="button" style="margin-top: 1%;" class="btn btn-success">Add More</button>
-    </div>
-  </div>
-
-  <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded" style="width: 18rem;">
-    <img src="assets/images/Indo.webp" alt="" style="width: 100%; height: 200px;">
-    <div class="card-body">
-      <h5 class="card-title">Indonesia</h5>
-      <p class="card-text">Indonesia, officially the Republic of Indonesia, is a country in Southeast Asia and Oceania, between the Indian and Pacific oceans. </p>
-      <button type="button" style="margin-top: 1%;" class="btn btn-success">Add More</button>
+    <!-- Indonesia Card -->
+    <div class="col-md-4 mb-3">
+      <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+        <img src="assets/images/Indo.webp" alt="Indonesia" class="card-img-top" style="height: 200px;">
+        <div class="card-body">
+          <h5 class="card-title">Indonesia</h5>
+          <p class="card-text">Indonesia, officially the Republic of Indonesia, is a country in Southeast Asia and Oceania, between the Indian and Pacific oceans.</p>
+          <button type="button" class="btn btn-success">Add More</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+
+
 <h2 style="margin-top: 5%; text-align: center; font-weight: bold;">Our Partners</h2>
 
-<div class="pay d-flex justify-content-center" style="margin-top: 7%; gap: 3%;">
-  <a href=""><img src="assets/images/7eleven.png" shadow p-3 mb-5 bg-body-tertiary rounded width="90" height="90" class="rounded-circle" alt="..."></a>
-  <a href=""><img src="assets/images/A.jpg" width="110" height="100" class="rounded-circle" alt="..."></a>
-  <a href=""><img src="assets/images/Amazon.png" width="100" height="100" class="rounded-circle" alt="..."></a>
-  <a href=""><img src="assets/images/Eco.jpg" width="100" height="100" class="rounded-circle" alt="..."></a>
-  <a href=""><img src="assets/images/Ya.jpg" width="100" height="100" class="rounded-circle" alt="..."></a>
+<div class="container mt-4">
+  <div class="pay d-flex justify-content-center flex-wrap" style="gap: 3%; margin-top: 7%;">
+    <a href=""><img src="assets/images/7eleven.png" width="90" height="90" class="rounded-circle shadow p-3 mb-5 bg-body-tertiary" alt="7 Eleven"></a>
+    <a href=""><img src="assets/images/A.jpg" width="110" height="100" class="rounded-circle shadow p-3 mb-5 bg-body-tertiary" alt="A"></a>
+    <a href=""><img src="assets/images/Amazon.png" width="100" height="100" class="rounded-circle shadow p-3 mb-5 bg-body-tertiary" alt="Amazon"></a>
+    <a href=""><img src="assets/images/Eco.jpg" width="100" height="100" class="rounded-circle shadow p-3 mb-5 bg-body-tertiary" alt="Eco"></a>
+    <a href=""><img src="assets/images/Ya.jpg" width="100" height="100" class="rounded-circle shadow p-3 mb-5 bg-body-tertiary" alt="Ya"></a>
+  </div>
 </div>
+
 
 <div class="cloumn" style="width: 100%;height: 100px; background-color:whitesmoke;">
   <div class="container my-5  " >
