Remore background logo footer

--- a/index.html
+++ b/index.html
@@ -259,26 +259,26 @@
   
   
   <!-- Footer -->
-  <footer class="bg-dark text-white py-4">
+  <footer class="bg-success text-white py-4">
     <div class="container">
         <div class="row">
             <!-- Partners Section with 3 Images -->
             <div class="col-md-3">
                 <h3>Partners</h3>
-                <img src="assets/images/footer.jpg" alt="Partner 1" class="img-fluid mb-2">
-                <img src="assets/images/footer1.jpg" alt="Partner 2" class="img-fluid mb-2">
+                <img src="assets/images/footer-removebg-preview.png" alt="Partner 1" class="img-fluid mb-2">
+                <img src="assets/images/footer1-removebg-preview.png" alt="Partner 2" class="img-fluid mb-2">
             </div>
   
             <!-- Quick Links Section with 4 Icons -->
             <div class="col-md-3">
                 <h3>Quick Links</h3>
                 <ul class="list-unstyled">
-                    <li><a href="#" class="text-white"><i class="fas fa-home"></i> <h6 class="name" style="color: green;">Home</h6></a></li>
-                    <li><a href="#" class="text-white" ><i class="fas fa-info-circle"></i> <h6 class="name" style="color: green;">About</h6></a></li>
-                    <li><a href="#" class="text-white" ><i class="fas fa-services"></i> <h6 class="name" style="color: green;">Tree</h6></a></li>
-                    <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: green;">Seed</h6></a></li>
-                    <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: green;">FAQ</h6></a></li>
-                    <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: green;">Donation Form</h6></a></li>
+                    <li><a href="#" class="text-white"><i class="fas fa-home"></i> <h6 class="name" style="color: rgb(248, 250, 248);">Home</h6></a></li>
+                    <li><a href="#" class="text-white" ><i class="fas fa-info-circle"></i> <h6 class="name" style="color: rgb(254, 255, 254);">About</h6></a></li>
+                    <li><a href="#" class="text-white" ><i class="fas fa-services"></i> <h6 class="name" style="color: rgb(249, 250, 249);">Tree</h6></a></li>
+                    <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(254, 255, 254);">Seed</h6></a></li>
+                    <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(246, 252, 246);">FAQ</h6></a></li>
+                    <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(249, 252, 249);">Donation Form</h6></a></li>
                 </ul>
                 <select class="form-select" aria-label="Default select example" >
                   <option selected>English</option>
@@ -316,7 +316,7 @@
                     <div class="mb-3">
                         <input type="email" class="form-control" id="email" placeholder="Enter your Email..." required>
                     </div>
-                    <button type="submit" class="btn btn-success btn-block">SING UP</button>
+                    <button type="submit" class="btn btn-dark btn-block">SING UP</button>
                 </form>
             </div>
         </div>
