--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
 </div>
 
 
-<div class="cloumn" style="width: 100%;height: 100px; background-color:whitesmoke;">
+<div class="cloumn" style="width: 100%;height: 100px; background-color:rgb(112, 111, 111); margin-top: 100px;">
   <div class="container my-5  " >
     <div class="row d-flex align-items-center ">
       <div class="col text-start">
         <p class="mt-5"><h4>TOGETHER, REFORESTING THE GLOBE.</h4></p>
       </div>
-      <div class="col text-end">
+      <div class="col text-end" style="margin-top: -100px;">
         <button class="btn btn-success mt-4 ">DONATE NOW</button>
       </div>
     </div>
