--- a/pages/About.html
+++ b/pages/About.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forests</title>
-    <link rel="stylesheet" href="style/style.css">
+    <script src="/JavaScript/animation1.js"></script>
+    <link rel="stylesheet" href="/style/style1.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -67,7 +68,7 @@
   <p class="p-4">Since 2014, we have planted over 135.5 million trees with 378 partners across 82 countries. Through this work, we’ve restored over 118,518 hectares (292,864 acres) of forest around the world, made 106 cities greener by planting urban trees for environmental justice and tree equity, and more.</p>
 </div>
 
-<div class="icons d-flex justify-content-center gap-5">
+<!-- <div class="icons d-flex justify-content-center gap-5">
   <div class="text-3 text-center">
     <i class="bi bi-tree" style="font-size: 200px;"></i>
     <h1>135M+</h1>
@@ -83,9 +84,40 @@
     <h1>378+</h1>
     <p>Planting partners</p>
   </div>
+</div> -->
+
+<div class="icons d-flex justify-content-center gap-5">
+  <div class="text-3 text-center">
+    <i class="bi bi-tree" style="font-size: 200px;"></i>
+    <h1 data-target="135">0</h1>
+    <p>Trees planted</p>
+  </div>
+  <div class="text-3 text-center">
+    <i class="bi bi-globe-americas" style="font-size: 200px;"></i>
+    <h1 data-target="94">0</h1>
+    <p>Countries</p>
+  </div>
+  <div class="text-3 text-center">
+    <i class="bi bi-flower1" style="font-size: 200px;"></i>
+    <h1 data-target="378">0</h1>
+    <p>Planting partners</p>
+  </div>
 </div>
 
 <p class="p-4 text-center">We're proud to continue to scale our impact. From restoring forest habitat for thousands of threatened species, to increasing food security and improving livelihoods in communities across five global regions by planting sustainable agroforests, we have seen, again and again, the transformative power of trees.</p>
+
+<div class="d-grid col-3 mx-auto">
+  <button class="btn btn-primary bg-success" type="button">Donwlond 2025 Report</button>
+</div>
+
+<div class="box-911">
+  <div class="text-9">
+    <p>Alliances & Partnerships</p>
+    <h1>Global Initiatives</h1>
+    <p>We can’t do this alone. We are proud to be affiliated with global initiatives that are leading the land restoration movement, including being a co-manager of Terrafund for AFR100, an implementation partner of the UN Decade on Ecosystem Restoration, a Council Member of the US Chapter of the One Trillion Trees Initiative, and an Official Delegate of the Convention on Biological Diversity. We have also fostered several important strategic alliances and partnerships, including with World Resources Institute, Global Mangrove Alliance, Jane Goodall Institute, and the U.S. Department of Agriculture, Forest Service.</p>
+  </div>
+  <div class="img-11"></div>
+</div>
 
 </body>
 </html>
