add new page tree

--- a/tree.html
+++ b/tree.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="tree.css">
   <link rel="stylesheet" href="responsive-style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="main.js"></script>
+  <script src=""></script>
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -224,7 +224,8 @@
     <div class="row mt-3">
         <!-- A Button below the map -->
         <div class="col-md-12 ">
-            <button class="btn btn-success" style="color: green;"><a href="https://www.google.com/maps/@11.5412007,104.8681841,14.61z?entry=ttu&g_ep=EgoyMDI1MDEwNy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Click me</a></button>
+            <button class="btn btn-success"><a href="https://www.google.com/maps/@11.5412007,104.8681841,14.61z?entry=ttu&g_ep=EgoyMDI1MDEwNy4wIKXMDSoASAFQAw%3D%3D" target="_blank"><button class="animated-btn">Click Me</button>
+            </a></button>
         </div>
     </div>
 </div>
