--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="#"><h5>Home</h5></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><h5>About us</h5></a>
+            <a class="nav-link active" aria-current="page" href="pages/About.html"><h5>About us</h5></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><h5>Tree</h5></a>
@@ -244,7 +244,7 @@
 </div>
 
 
-<div class="cloumn" style="width: 100%;height: 100px; background-color:rgb(112, 111, 111); margin-top: 100px;">
+<!-- <div class="cloumn" style="width: 100%;height: 100px; background-color:rgb(112, 111, 111); margin-top: 100px;">
   <div class="container my-5  " >
     <div class="row d-flex align-items-center ">
       <div class="col text-start">
@@ -255,7 +255,7 @@
       </div>
     </div>
   </div>
-  </div>
+  </div> -->
   
   
   <!-- Footer -->
@@ -325,4 +325,4 @@
 </body>
 </html>
 
-<script src="/JavaScript/animation.js"></script>
+<script src="JavaScript/animation.js"></script>
