--- a/pages/About.html
+++ b/pages/About.html
@@ -46,78 +46,138 @@
     <p>A non-profit organization focused on Global Reforestation.</p>
 </div>
 
-<div class="imgs d-flex p-4">
-    <img src="/assets/images/pic-img3.jpg" style="width: 30%; height: 300px;" class="rounded mx-auto d-block" alt="...">
-    <img src="/assets/images/pic-img1.avif" style="width: 30%; height: 300px;" class="rounded mx-auto d-block" alt="...">
-    <img src="/assets/images/pic-img2.webp" style="width: 30%; height: 300px;" class="rounded mx-auto d-block" alt="...">
+<div class="card-group gap-2 p-3">
+  <div class="card">
+    <img src="/assets/images/pic-img3.jpg" class="card-img-top" alt="...">
+  </div>
+  <div class="card">
+    <img src="/assets/images/pic-img1.avif" class="card-img-top" alt="...">
+  </div>
+  <div class="card">
+    <img src="/assets/images/pic-img2.webp" class="card-img-top" alt="...">
+  </div>
 </div>
+
 
 <p style="text-align: center; margin-top: 50px;">One Tree Planted is an environmental nonprofit that is dedicated to making it <br> simple for anyone to help the environment. Our simplified donation process and global reach has helped us <br> build a movement of supporters who believe in the power of trees.</p>
 
-<div class="img-text p-4 d-flex">
-  <img src="/assets/images/pic-img4.jpg" alt="">
-  <div class="text-1 p-4 text-center text-start">
-    <h2>The power of trees</h2>
-    <p class="text-start" style="left: 20px;">Our future depends on nature, it provides the essential building blocks for life—clean air, pure water, and fertile soil. Trees are at the heart of this natural system, acting as powerful tools for carbon capture, helping to stabilize our climate and mitigate the impacts of global warming. They hold the land together, preventing erosion and enriching the biodiversity that supports all life on Earth. Forests are nature’s water purifiers, safeguarding our fresh water supply while offering sustainable resources like food, timber, and medicine. Every tree we plant is an investment in the future—nurturing the planet, protecting life, and inspiring hope for generations to come.</p>
+<div class="img-text p-4 d-flex flex-wrap align-items-center">
+  <div class="col-12 col-md-6 text-center text-md-start">
+    <img src="/assets/images/pic-img4.jpg" class="img-fluid rounded" alt="Tree image">
+  </div>
+  <div class="col-12 col-md-6 text-1 p-4 text-center text-md-start">
+    <h2>The Power of Trees</h2>
+    <p style="left: 20px;">
+      Our future depends on nature, it provides the essential building blocks for life—clean air, pure water, and fertile soil. Trees are at the heart of this natural system, acting as powerful tools for carbon capture, helping to stabilize our climate and mitigate the impacts of global warming. They hold the land together, preventing erosion and enriching the biodiversity that supports all life on Earth. Forests are nature’s water purifiers, safeguarding our fresh water supply while offering sustainable resources like food, timber, and medicine. Every tree we plant is an investment in the future—nurturing the planet, protecting life, and inspiring hope for generations to come.
+    </p>
   </div>
 </div>
 
-<div class="text-2 text-center">
+<div class="text-2 text-center p-4">
   <p class="fs-3">Together, Planting a Forest.</p>
-  <h1 style="font-weight: bold;">Our impact over the years</h1>
-  <p class="p-4">Since 2014, we have planted over 135.5 million trees with 378 partners across 82 countries. Through this work, we’ve restored over 118,518 hectares (292,864 acres) of forest around the world, made 106 cities greener by planting urban trees for environmental justice and tree equity, and more.</p>
+  <h1 class="fw-bold">Our Impact Over the Years</h1>
+  <p class="px-4">
+    Since 2014, we have planted over 135.5 million trees with 378 partners across 82 countries. Through this work, we’ve restored over 118,518 hectares (292,864 acres) of forest around the world, made 106 cities greener by planting urban trees for environmental justice and tree equity, and more.
+  </p>
 </div>
 
-<!-- <div class="icons d-flex justify-content-center gap-5">
-  <div class="text-3 text-center">
-    <i class="bi bi-tree" style="font-size: 200px;"></i>
-    <h1>135M+</h1>
-    <p>Trees planted</p>
-  </div>
-  <div class="text-3 text-center">
-    <i class="bi bi-globe-americas" style="font-size: 200px;"></i>
-    <h1>94+</h1>
-    <p>Countries</p>
-  </div>
-  <div class="text-3 text-center">
-    <i class="bi bi-flower1" style="font-size: 200px;"></i>
-    <h1>378+</h1>
-    <p>Planting partners</p>
-  </div>
-</div> -->
-
-<div class="icons d-flex justify-content-center gap-5">
-  <div class="text-3 text-center">
-    <i class="bi bi-tree" style="font-size: 200px;"></i>
+<div class="icons row justify-content-center gap-4">
+  <div class="text-3 col-12 col-md-4 col-lg-2 text-center">
+    <i class="bi bi-tree" style="font-size: 100px;"></i>
     <h1 data-target="135">0</h1>
     <p>Trees planted</p>
   </div>
-  <div class="text-3 text-center">
-    <i class="bi bi-globe-americas" style="font-size: 200px;"></i>
+  <div class="text-3 col-12 col-md-4 col-lg-2 text-center">
+    <i class="bi bi-globe-americas" style="font-size: 100px;"></i>
     <h1 data-target="94">0</h1>
     <p>Countries</p>
   </div>
-  <div class="text-3 text-center">
-    <i class="bi bi-flower1" style="font-size: 200px;"></i>
+  <div class="text-3 col-12 col-md-4 col-lg-2 text-center">
+    <i class="bi bi-flower1" style="font-size: 100px;"></i>
     <h1 data-target="378">0</h1>
     <p>Planting partners</p>
   </div>
 </div>
 
-<p class="p-4 text-center">We're proud to continue to scale our impact. From restoring forest habitat for thousands of threatened species, to increasing food security and improving livelihoods in communities across five global regions by planting sustainable agroforests, we have seen, again and again, the transformative power of trees.</p>
+<p class="p-4 text-center">
+  We're proud to continue to scale our impact. From restoring forest habitat for thousands of threatened species, to increasing food security and improving livelihoods in communities across five global regions by planting sustainable agroforests, we have seen, again and again, the transformative power of trees.
+</p>
 
-<div class="d-grid col-3 mx-auto">
-  <button class="btn btn-primary bg-success" type="button">Donwlond 2025 Report</button>
+<div class="d-grid col-12 col-md-6 col-lg-3 mx-auto">
+  <button class="btn btn-success btn-lg" type="button">Download 2025 Report</button>
 </div>
 
-<div class="box-911">
-  <div class="text-9">
-    <p>Alliances & Partnerships</p>
-    <h1>Global Initiatives</h1>
-    <p>We can’t do this alone. We are proud to be affiliated with global initiatives that are leading the land restoration movement, including being a co-manager of Terrafund for AFR100, an implementation partner of the UN Decade on Ecosystem Restoration, a Council Member of the US Chapter of the One Trillion Trees Initiative, and an Official Delegate of the Convention on Biological Diversity. We have also fostered several important strategic alliances and partnerships, including with World Resources Institute, Global Mangrove Alliance, Jane Goodall Institute, and the U.S. Department of Agriculture, Forest Service.</p>
+<div class="card-box p-3 shadow mb-5 bg-body-tertiary rounded" style="margin-top: 100px;">
+  <div class="row align-items-center">
+    <div class="col-12 col-lg-8 text-24 text-center">
+      <p class="fs-4">Alliances & Partnerships</p>
+      <h1 class="fw-bold">Global Initiatives</h1>
+      <p class="px-4 px-lg-5">
+        We can’t do this alone. We are proud to be affiliated with global initiatives that are leading the land restoration movement, including being a co-manager of Terrafund for AFR100, an implementation partner of the UN Decade on Ecosystem Restoration, a Council Member of the US Chapter of the One Trillion Trees Initiative, and an Official Delegate of the Convention on Biological Diversity. We have also fostered several important strategic alliances and partnerships, including with World Resources Institute, Global Mangrove Alliance, Jane Goodall Institute, and the U.S. Department of Agriculture, Forest Service.
+      </p>
+    </div>
+    <div class="col-12 col-lg-4 d-flex justify-content-center">
+      <img src="/assets/images/pic-end.avif" alt="Global Initiatives" class="img-fluid rounded" style="max-width: 100%;">
+    </div>
   </div>
-  <div class="img-11"></div>
 </div>
+
+ <footer class="bg-success text-white py-4">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-3">
+              <h3>Partners</h3>
+              <img src="/assets/images/footer-removebg-preview.png" alt="Partner 1" class="img-fluid mb-2">
+              <img src="/assets/images/footer1-removebg-preview.png" alt="Partner 2" class="img-fluid mb-2">
+          </div>
+
+          <div class="col-md-3">
+              <h3>Quick Links</h3>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white"><i class="fas fa-home"></i> <h6 class="name" style="color: rgb(248, 250, 248);">Home</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-info-circle"></i> <h6 class="name" style="color: rgb(254, 255, 254);">About</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-services"></i> <h6 class="name" style="color: rgb(249, 250, 249);">Tree</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(254, 255, 254);">Seed</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(246, 252, 246);">FAQ</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(249, 252, 249);">Donation Form</h6></a></li>
+              </ul>
+              <select class="form-select" aria-label="Default select example" >
+                <option selected>English</option>
+                <option value="1">Khmer</option>
+                <option value="2">Chineese</option>
+                <option value="3">Thia</option>
+                <option value="3">Greman</option>
+                <option value="3">U.K</option>
+                <option value="3">Japen</option>
+                <option value="3">Lao</option>
+                <option value="3">Malaysa</option>
+              </select>
+          </div>
+
+          <div class="col-md-3">
+              <h3>Connect</h3>
+             <h6>Online: Contact us</h6>  
+             <h6>Call: 012 33 44 55 </h6> <br>
+    <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
+    <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
+    <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
+    <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>
+          </div>
+          <div class="col-md-3">
+              <h3>Newsletter Signup</h3>
+              <form action="#" method="POST">
+                  <div class="mb-3">
+                      <input type="text" class="form-control" id="first-name" placeholder="Enter your first name...." required>
+                  </div>
+                  <div class="mb-3">
+                      <input type="email" class="form-control" id="email" placeholder="Enter your Email..." required>
+                  </div>
+                  <button type="submit" class="btn btn-dark btn-block">SING UP</button>
+              </form>
+          </div>
+      </div>
+  </div>
+</footer>
 
 </body>
 </html>
