add image about

--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
                 </ul>
                 <select class="form-select" aria-label="Default select example" >
                   <option selected>English</option>
-                  <option value="1">Khmer</option>
-                  <option value="2">Chineese</option>
-                  <option value="3">Thia</option>
-                  <option value="3">Greman</option>
-                  <option value="3">U.K</option>
-                  <option value="3">Japen</option>
-                  <option value="3">Lao</option>
-                  <option value="3">Malaysa</option>
+                  <option value="1">Cambodia</option>
+                  <option value="2">Chinese</option>
+                  <option value="3">Thai</option>
+                  <option value="3">Germani</option>
+                  <option value="3">Vietnam</option>
+                  <option value="3">Japan</option>
+                  <option value="3">Loar</option>
+                  <option value="3">Malaysia</option>
                 </select>
             </div>
   
