--- a/pages/About.html
+++ b/pages/About.html
@@ -13,14 +13,14 @@
     
   <nav class="navbar navbar-expand-lg bg-success navigation-wrap">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="/assets/images/logo.png" alt=""></a>
+      <a class="navbar-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><h5>Home</h5></a>
+            <a class="nav-link active" aria-current="page" href="/index.html"><h5>Home</h5></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><h5>About us</h5></a>
@@ -48,13 +48,13 @@
 
 <div class="card-group gap-2 p-3">
   <div class="card">
-    <img src="/assets/images/pic-img3.jpg" class="card-img-top" alt="...">
+    <img src="../assets/images/pic-img3.jpg" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img src="/assets/images/pic-img1.avif" class="card-img-top" alt="...">
+    <img src="../assets/images/pic-img1.avif" class="card-img-top" alt="...">
   </div>
   <div class="card">
-    <img src="/assets/images/pic-img2.webp" class="card-img-top" alt="...">
+    <img src="../assets/images/pic-img2.webp" class="card-img-top" alt="...">
   </div>
 </div>
 
@@ -63,7 +63,7 @@
 
 <div class="img-text p-4 d-flex flex-wrap align-items-center">
   <div class="col-12 col-md-6 text-center text-md-start">
-    <img src="/assets/images/pic-img4.jpg" class="img-fluid rounded" alt="Tree image">
+    <img src="../assets/images/pic-img4.jpg" class="img-fluid rounded" alt="Tree image">
   </div>
   <div class="col-12 col-md-6 text-1 p-4 text-center text-md-start">
     <h2>The Power of Trees</h2>
@@ -117,7 +117,7 @@
       </p>
     </div>
     <div class="col-12 col-lg-4 d-flex justify-content-center">
-      <img src="/assets/images/pic-end.avif" alt="Global Initiatives" class="img-fluid rounded" style="max-width: 100%;">
+      <img src="../assets/images/pic-end.avif" alt="Global Initiatives" class="img-fluid rounded" style="max-width: 100%;">
     </div>
   </div>
 </div>
@@ -127,8 +127,8 @@
       <div class="row">
           <div class="col-md-3">
               <h3>Partners</h3>
-              <img src="/assets/images/footer-removebg-preview.png" alt="Partner 1" class="img-fluid mb-2">
-              <img src="/assets/images/footer1-removebg-preview.png" alt="Partner 2" class="img-fluid mb-2">
+              <img src="../assets/images/footer-removebg-preview.png" alt="Partner 1" class="img-fluid mb-2">
+              <img src="../assets/images/footer1-removebg-preview.png" alt="Partner 2" class="img-fluid mb-2">
           </div>
 
           <div class="col-md-3">
@@ -158,10 +158,10 @@
               <h3>Connect</h3>
              <h6>Online: Contact us</h6>  
              <h6>Call: 012 33 44 55 </h6> <br>
-    <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
-    <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
-    <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
-    <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>
+              <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
+              <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
+              <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
+              <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>
           </div>
           <div class="col-md-3">
               <h3>Newsletter Signup</h3>
