--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <a class="nav-link active" aria-current="page" href="pages/About.html"><h5>About us</h5></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><h5>Tree</h5></a>
+            <a class="nav-link active" aria-current="page" href="pages/tree.html"><h5>Tree</h5></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><h5>Seed</h5></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><h5>FAQ</h5></a>
+            <a class="nav-link active" aria-current="page" href="pages/FAQ.html"><h5>FAQ</h5></a>
           </li>
-          <button type="button" class="btn btn-warning fs-5" style="font-family: Helvetica;"><li class="nav-item"><a href="nav-link" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Donation</a></li></button>
+          <button type="button" class="btn btn-warning fs-5" style="font-family: Helvetica;"><li class="nav-item"><a href="pages/Donation.html" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Donation</a></li></button>
         </ul>
       </div>
     </div>
