--- a/pages/About.html
+++ b/pages/About.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index.html"><h5>Home</h5></a>
+            <a class="nav-link active" aria-current="page" href="../index.html"><h5>Home</h5></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"><h5>About us</h5></a>
@@ -39,6 +39,7 @@
       </div>
     </div>
   </nav>
+
 
 <div class="text text-center p-4">
     <h1 style="font-weight: bold;">About Us</h1>
