--- a/pages/Donation.html
+++ b/pages/Donation.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page Donation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Donation.css">
-    <link rel="stylesheet" href="Donation-reponsive.css">
+    <link rel="stylesheet" href="../style/Donation.css">
+    <link rel="stylesheet" href="../style/Donation-reponsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="Donation.js"></script>
+    <script src="../JavaScript/main.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
     
     <nav class="navbar navbar-expand-lg bg-success navigation-wrap">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo1.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -53,7 +53,7 @@
         <div class="row">
             <!-- Image Column -->
             <div class="col-md-6 text-center mb-4">
-                <img src=".." class="img-fluid" alt="Donation Image">
+                <img src="../assets/images/photo-Donation.jpg" class="img-fluid" alt="Donation Image">
             </div>
             
             <!-- Form Column -->
