--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page FAQ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="FAQ.css">
-  <link rel="stylesheet" href="FAQ-responsive.css">
+  <link rel="stylesheet" href="../style/FAQ.css">
+  <link rel="stylesheet" href="../style/FAQ-responsive.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="FAq.js"></script>
+  <script src="../JavaScript/main.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
