--- a/pages/tree.html
+++ b/pages/tree.html
@@ -6,10 +6,10 @@
   <title>Page Tree</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="tree.css">
+  <link rel="stylesheet" href="../style/tree.css">
   <link rel="stylesheet" href="responsive-style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <script src=""></script>
+  <script src="../JavaScript/main.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
